--- a/a3_task2_Carmen_GalazGarcia.Rmd
+++ b/a3_task2_Carmen_GalazGarcia.Rmd
@@ -57,8 +57,10 @@ Make sure to `View()` the resulting data frame (remember: run `View()` in the Co
 
 ```{r}
 # Your code here: 
-
-
+sw_split_name <- starwars %>% 
+  separate(col=name, 
+           into = c("name_1", "name_2"),
+           sep="-")
 ```
 
 #### 1B. Follow me
@@ -91,7 +93,12 @@ Make sure to `View()` the resulting data frame (remember: run `View()` in the Co
 
 ```{r}
 # Your code here:
-
+sw_skin_sep <- starwars %>% 
+  separate(col=skin_color, 
+           into=c("skin_1", "skin_2"),
+           sep=",",
+           remove = FALSE,
+           extra = "merge")
 
 ```
 
@@ -113,7 +120,7 @@ Check the output after running the code.
 mpg_make_model <- mpg %>% # Start with mpg
   unite(col = make_model, # Create a new column called 'make_model'
         c(manufacturer, model), # That combines the manufacturer & model column
-        sep = "HEY!" # Puts "HEY!" between the pieces (default is underscore)
+        sep = "-" # Puts "HEY!" between the pieces (default is underscore)
         ) 
 
 # Feel free to try different separators in the `sep = ""` argument above.
@@ -127,7 +134,11 @@ In the code chunk below, starting from the `mpg` data create a new data frame ca
 
 ```{r}
 # Your code here: 
-
+mpg_model_class <- mpg %>% 
+  unite(col= model_class, 
+        c(model,class),
+        sep = "-",
+        remove=FALSE)
 
 ```
 
@@ -157,7 +168,11 @@ In the code chunk below, use `ymd()` to convert a date that you choose in `YYYY-
 
 ```{r}
 # Your code here: 
+ymd("1991-05-21")
 
+ymd("1991/05/21")
+
+ymd("19910521")
 
 ```
 
@@ -182,8 +197,10 @@ In the code chunk below, create a vector (using `c()`, as above) stored as `some
 
 ```{r}
 # Your code here: 
-
-
+some_dates <- c(04011953, 04031952, 03271979)
+some_dates_converted<-mdy(some_dates)
+some_dates_converted
+class(some_dates_converted)
 ```
 
 #### 3C. Follow me
@@ -215,7 +232,7 @@ points_by_month
 
 #### 3C. On your own
 
-You will follow a similar exercise as above, with a few additional steps: 
+You will follow a similar exercise as above,  with a few additional steps: 
 
 Starting from the `lakers` dataset, create a new dataset called `gasol_hookshots` in which you: 
 
@@ -226,7 +243,11 @@ Starting from the `lakers` dataset, create a new dataset called `gasol_hookshots
 
 ```{r}
 # Your code here: 
-
+gasol_hookshots <- lakers %>% 
+  filter(player == "Pau Gasol" & type=="hook") %>% 
+  mutate(new_date = ymd(date)) %>% 
+  mutate(new_month = month(new_date)) %>%
+  count(new_month)
 
 ```
 
@@ -276,7 +297,11 @@ Note: If you add another condition within `case_when()` that is `TRUE ~ "some th
 
 ```{r}
 # Your code here: 
-
+storms_danger <- storms %>%
+  mutate(danger = case_when(
+    status == "hurricane"~"high",
+    status != "hurricane"~"moderate"
+  ))
 
 ```
 
