--- a/a3_task2_Carmen_GalazGarcia.Rmd
+++ b/a3_task2_Carmen_GalazGarcia.Rmd
@@ -57,10 +57,10 @@ Make sure to `View()` the resulting data frame (remember: run `View()` in the Co
 
 ```{r}
 # Your code here: 
-sw_split_name <- starwars %>% 
-  separate(col=name, 
-           into = c("name_1", "name_2"),
-           sep="-")
+sw_split_name <- starwars %>%           # coy data
+  separate(col=name,                    # separate name columns
+           into = c("name_1", "name_2"),# names of new columns
+           sep="-")                     # separation at first dash
 ```
 
 #### 1B. Follow me
@@ -93,12 +93,12 @@ Make sure to `View()` the resulting data frame (remember: run `View()` in the Co
 
 ```{r}
 # Your code here:
-sw_skin_sep <- starwars %>% 
-  separate(col=skin_color, 
-           into=c("skin_1", "skin_2"),
-           sep=",",
-           remove = FALSE,
-           extra = "merge")
+sw_skin_sep <- starwars %>%             # copy dataset
+  separate(col=skin_color,              # separate skin_color column
+           into=c("skin_1", "skin_2"),  # names of new columns
+           sep=",",                     # separator is "-" (dash)
+           remove = FALSE,              # keep original column
+           extra = "merge")             # merge everything following - into the second column
 
 ```
 
@@ -134,11 +134,11 @@ In the code chunk below, starting from the `mpg` data create a new data frame ca
 
 ```{r}
 # Your code here: 
-mpg_model_class <- mpg %>% 
-  unite(col= model_class, 
-        c(model,class),
-        sep = "-",
-        remove=FALSE)
+mpg_model_class <- mpg %>%   # copy data
+  unite(col= model_class,    # create a column called model_class
+        c(model,class),      # that combines the model and class columns
+        sep = "-",           # merge columns using "-" between data
+        remove=FALSE)        # keep original columns
 
 ```
 
@@ -168,7 +168,9 @@ In the code chunk below, use `ymd()` to convert a date that you choose in `YYYY-
 
 ```{r}
 # Your code here: 
-ymd("1991-05-21")
+
+ # convert my birthday in different formats to Date class:
+ymd("1991-05-21") 
 
 ymd("1991/05/21")
 
@@ -197,10 +199,10 @@ In the code chunk below, create a vector (using `c()`, as above) stored as `some
 
 ```{r}
 # Your code here: 
-some_dates <- c(04011953, 04031952, 03271979)
-some_dates_converted<-mdy(some_dates)
-some_dates_converted
-class(some_dates_converted)
+some_dates <- c(04011953, 04031952, 03271979)  # dates of loved ones as numbers
+some_dates_converted<-mdy(some_dates)          # convert to date format
+some_dates_converted                           # show dates in console
+class(some_dates_converted)                    # check class is Date
 ```
 
 #### 3C. Follow me
@@ -243,11 +245,13 @@ Starting from the `lakers` dataset, create a new dataset called `gasol_hookshots
 
 ```{r}
 # Your code here: 
-gasol_hookshots <- lakers %>% 
-  filter(player == "Pau Gasol" & type=="hook") %>% 
-  mutate(new_date = ymd(date)) %>% 
-  mutate(new_month = month(new_date)) %>%
-  count(new_month)
+gasol_hookshots <- lakers %>%      # copy lakers data
+  filter(player == "Pau Gasol" & type=="hook") %>%   # choose Pau Gasol hooks data 
+  mutate(new_date = ymd(date)) %>%                   # add column new_date with dates converted to Date class
+  mutate(new_month = month(new_date)) %>%            # add column new_month extracting month from new_date
+  count(new_month)                # count number of Pau Gasol's hooks per month
+
+gasol_hookshots    # show number of Pau Gasol's hooks per month
 
 ```
 
@@ -297,10 +301,10 @@ Note: If you add another condition within `case_when()` that is `TRUE ~ "some th
 
 ```{r}
 # Your code here: 
-storms_danger <- storms %>%
-  mutate(danger = case_when(
-    status == "hurricane"~"high",
-    status != "hurricane"~"moderate"
+storms_danger <- storms %>%           # copy storms dataset
+  mutate(danger = case_when(          # add column danger, which contains...
+    status == "hurricane"~"high",     # "high" if status equals hurricane
+    status != "hurricane"~"moderate"  # "moderate" otherwise
   ))
 
 ```
